--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ button:hover {
     background-color: #EED54F;
     color: rgb(255, 0, 70);
     transition: color 0.1s ease-in, background-color 0.5s ease-in;
+    opacity: 0.75%;
 }
 
 .link-button p {
